# Clauding

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: anatomy.rs  camera.rs  collision.rs  color.rs  combat.rs  deform.rs  fbx_anim.rs  gltf_loader.rs  gpu.rs  gpu_kernels.rs  gpu_shaders.rs  gpu_spirv.rs  hud.rs  image.rs  input.rs  jobs.rs  lib.rs  main.rs  material.rs  math.rs  menu.rs  mesh.rs  navmesh.rs  neat.rs  noise.rs  npc.rs  particle.rs  physics.rs  placement.rs  player.rs  player_jobs.rs  raster.rs  render.rs  rng.rs  skeleton.rs  skeleton_anim.rs  state.rs  suspension.rs  telemetry.rs  tire.rs  (+4 more)
src/platform/: mod.rs  wayland.rs
