[package]
name = "clauding"
version = "0.1.0"
edition = "2024"
description = "A Rust 3D city/NPC simulation built without external crates — raw Vulkan FFI, hand-written GLTF/FBX parsers, NEAT, and a parallel software rasterizer. Linux/Wayland."
license = "MIT"
repository = "https://github.com/adamhajek/clauding"
readme = "README.md"
authors = ["Adam Hájek"]
keywords = ["graphics", "vulkan", "simulation", "no-deps", "neat"]
categories = ["graphics", "simulation"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "clauding"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"
